# CleanCodeCppCatch

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  README.md
CleanCode/: CMakeLists.txt  clean_code.cpp  complex_function.cpp  complex_function.h  names.cpp
ClockTimer/: CMakeLists.txt  clock_timer_main.cpp  clock_timer_test.cpp
Completed/: CMakeLists.txt
Completed/BoundedStackCompleted/: CMakeLists.txt  simple_bounded_stack.h  stack_test.cpp
Completed/DvdShopCompleted/: CMakeLists.txt  ChildrensMovie.cpp  ChildrensMovie.h  DvdShopTest.cpp  Movie.cpp  Movie.h  NewReleaseMovie.cpp  NewReleaseMovie.h  RegularMovie.cpp  RegularMovie.h  Rental.cpp  Rental.h  RentalStatement.cpp  RentalStatement.h
Completed/EmployeeCompleted/: AugurDB.h  AugurDatabase.cpp  AugurDatabase.h  CMakeLists.txt  Database.cpp  Database.h  Employee.cpp  Employee.h  EmployeeTestCompleted.cpp  PaymentScheme.cpp  PaymentScheme.h  Project.cpp  Project.h  ReportPrinter.cpp  ReportPrinter.h
Completed/EmployeeSimplifiedCompleted/: AugurDB.hpp  CMakeLists.txt  Employee.cpp  Employee.hpp  EmployeeDao.cpp  EmployeeDao.hpp  EmployeeDaoTest.cpp  EmployeeTest.cpp  PaymentScheme.cpp  PaymentScheme.hpp  Project.hpp  ReportPrinter.cpp  ReportPrinter.hpp
Completed/FizzBuzzCompleted/: CMakeLists.txt  fizz_buzz.cpp  fizz_buzz_main.cpp  fizz_buzz_test.cpp
Completed/LeapYearCompleted/: CMakeLists.txt  main.cpp
Completed/LoadBalancerCompleted/: CMakeLists.txt  controller.cpp  controller.h  load_balancer.cpp  load_balancer.h  load_balancer_main.cpp  resource.h
Completed/OneShotsCompleted/: CMakeLists.txt  argument_passing.cpp  ownership_1.cpp  ownership_extra.cpp
Completed/PointCompleted/: CMakeLists.txt  encapsulated_point.h  encapsulated_point_test.cpp  point_main.cpp  raw_point.h  raw_point_test.cpp
Completed/PrimeFactorsCompleted/: CMakeLists.txt  prime_factors.cpp  prime_factors.h  prime_factors_main.cpp  prime_factors_test.cpp
Completed/SalariesCompleted/: CMakeLists.txt  salaries_completed.cpp  salaries_completed.h  salaries_completed_main.cpp
Completed/StackCompleted/: CMakeLists.txt  stack.cpp  stack.h  stack_main.cpp  stack_test.cpp
DvdShop/: CMakeLists.txt  Customer.cpp  Customer.h  DvdShopTest.cpp  Movie.cpp  Movie.h  Rental.cpp  Rental.h
DvdShopCompleted/: .clang-format  CMakeLists.txt  ChildrensMovie.cpp  ChildrensMovie.h  DvdShopTest.cpp  Movie.cpp  Movie.h  NewReleaseMovie.cpp  NewReleaseMovie.h  RegularMovie.cpp  RegularMovie.h  Rental.cpp  Rental.h  RentalStatement.cpp  RentalStatement.h  main.cpp
EmployeeCompleted/: AugurDB.h  AugurDatabase.cpp  AugurDatabase.h  CMakeLists.txt  Database.h  Employee.cpp  Employee.h  EmployeeTestCompleted.cpp  HourReporter.h  PaymentCalculator.h  Project.cpp  Project.h  ReportPrinter.cpp  ReportPrinter.h
Examples/CleanCode/: CMakeLists.txt  classes.cpp  classes.hpp  clean_code.cpp  clean_code.h  complex_function.cpp  complex_function.h  complex_function.hpp  complex_function_refactored.cpp  complex_function_refactored.h  complex_function_refactored.hpp  functions.cpp  functions.hpp  names.cpp  names.hpp
Examples/MemoryAndPolymorphism/: CMakeLists.txt  animal.h  animal_with_switch.h  cat.h  copy_move_main.cpp  dog.h  godbolt_vec.cpp  memory_main.cpp  polymorphic_array.h  polymorphism_main.cpp  print_memory_layout.cpp  print_memory_layout.h  simple.cpp
InProgress/Oxx/: CMakeLists.txt  cli.cpp  cli.hpp  core.cpp  core.hpp  core_test.cpp  game.cpp  game.hpp  main.cpp  old_core.cpp  single_player_game.cpp  single_player_game.hpp
InProgress/Oxx/doc/: ox.md
LoadBalancer/: CMakeLists.txt  controller.cpp  controller.h  load_balancer.h  load_balancer_main.cpp  resource.h
LoadBalancerCompleted/: CMakeLists.txt  load_balancer.cpp  load_balancer.h  load_balancer_main.cpp  resource.h
MemoryAndPolymorphism/: CMakeLists.txt  animal.h  cat.h  dog.h  memory_main.cpp  polymorphic_array.h  polymorphism_main.cpp  simple.cpp
PointCompleted/: CMakeLists.txt  abstract_point.h  abstract_point_test.cpp  concrete_point.h  concrete_point_test.cpp  encapsulated_point.h  encapsulated_point_test.cpp  point.cpp  raw_point.h  raw_point_test.cpp
PrimeFactors/: CMakeLists.txt  prime_factors.cpp  prime_factors_main.cpp  prime_factors_test.cpp
Stack/: CMakeLists.txt  stack.cpp  stack_main.cpp  stack_test.cpp
Stack/assignment/: stack-assignments.tex
Stack/doc/: .gitignore  stack-assignments.tex
Workshops/: CMakeLists.txt  salaries_completed.cpp  salaries_completed_main.cpp  salaries_original.cpp  salaries_original_main.cpp  salaries_workshop_main.cpp
Workshops/DvdShop/: CMakeLists.txt  Customer.cpp  Customer.h  DvdShopTest.cpp  Movie.cpp  Movie.h  Rental.cpp  Rental.h  main.cpp
Workshops/Employee/: AugurDB.h  CMakeLists.txt  Employee.cpp  Employee.h  EmployeeTest.cpp  Project.cpp  Project.h
Workshops/EmployeeSimplified/: AugurDB.h  CMakeLists.txt  Employee.cpp  Employee.h  EmployeeTest.cpp  Project.h  ReportPrinter.cpp  ReportPrinter.h
Workshops/EmployeeSimplified/doc/: employee_assignments.tex
Workshops/FizzBuzz/: CMakeLists.txt  fizz_buzz.cpp  fizz_buzz.h  fizz_buzz_main.cpp  fizz_buzz_test.cpp
Workshops/LeapYear/: CMakeLists.txt  main.cpp
Workshops/LoadBalancer/: CMakeLists.txt  controller.cpp  controller.h  load_balancer.cpp  load_balancer.h  load_balancer_main.cpp  resource.h
Workshops/OneShots/: CMakeLists.txt  argument_passing.cpp  ownership_1.cpp
Workshops/Point/: CMakeLists.txt  encapsulated_point_test.cpp  point.cpp  raw_point_test.cpp
Workshops/PrimeFactors/: CMakeLists.txt  prime_factors.cpp  prime_factors.h  prime_factors_main.cpp  prime_factors_test.cpp
Workshops/SalariesOriginal/: CMakeLists.txt  salaries_original.cpp  salaries_original.h  salaries_original_main.cpp
Workshops/SalariesWorkshop/: CMakeLists.txt  salaries_workshop.cpp  salaries_workshop.h  salaries_workshop_main.cpp
Workshops/Stack/: CMakeLists.txt  stack.h  stack_test.cpp
Workshops/Stack/assignment/: short-stack-assignments.tex
Workshops/Stack/doc/: Note.txt  short-stack-assignments.tex  stack-assignments.tex
(+275 files in other folders)
