add_subdirectory("DvdShopCompleted")
add_subdirectory("EmployeeCompleted")
add_subdirectory("EmployeeSimplifiedCompleted")
add_subdirectory("FizzBuzzCompleted")
add_subdirectory("LeapYearCompleted")
add_subdirectory("LoadBalancerCompleted")
add_subdirectory("OneShotsCompleted")
add_subdirectory("PointCompleted")
add_subdirectory("PrimeFactorsCompleted")
add_subdirectory("SalariesCompleted")
add_subdirectory("StackCompleted")
