add_subdirectory("DvdShop")
add_subdirectory("Employee")
add_subdirectory("EmployeeSimplified")
add_subdirectory("FizzBuzz")
add_subdirectory("LeapYear")
add_subdirectory("LoadBalancer")
add_subdirectory("OneShots")
add_subdirectory("Point")
add_subdirectory("PrimeFactors")
add_subdirectory("SalariesOriginal")
add_subdirectory("SalariesWorkshop")
add_subdirectory("Stack")
